@@ -1,3 +1,9 @@
+2010-04-09	Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* libblock/src/blkdev.c: Fixed disk delete.
+	* libblock/src/diskdevs.c: Obtain/release disk during open/close.
+	This avoids unprotected usage of private disk variables.
+
 2010-04-08	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* score/include/rtems/score/object.h: Documentation.
